# FuzzyShell

./: .gitignore  EMBEDDING_DTYPE_GUIDE.md  README.md  SCROLLING_FEATURES.md  SCROLLING_FIXES.md  SETUP.md  benchmark_models.py  fuzzyshell-wrapper.bash  fuzzyshell-wrapper.zsh  fuzzyshell.sh  fuzzyshell_setup.sh  inference_script.py  install.sh  install_standalone.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_commands.txt  test_description_feature.py  test_embeddings.py  test_ui.py
docs/: INSTALLATION_AND_USAGE.md
src/fuzzyshell/: __init__.py  ann_index_manager.py  bm25_scorer.py  cache_coordinator.py  cli_commands.py  command_description_generator.py  db_wrapper.py  embedding_processor.py  error_handler_util.py  expert_screen_controller.py  fuzzy_tui.py  fuzzyshell.py  history_ingestion_coordinator.py  metadata_manager.py  micro_ingest.py  model_configs.py  model_handler.py  progress.py  progress_wrapper.py  search_coordinator.py  search_engine.py  smart_startup.py  startup_coordinator.py  startup_helper.py  status_display_manager.py  tokenization_strategy.py  tokenizer_strategies.py
tests/: README.md  __init__.py  test_ann_performance.py  test_ann_search.py  test_ansi_safety.py  test_both_fixes.py  test_command_cleaning.py  test_description_generation.py  test_embedding_persistence.py  test_embedding_roundtrip.py  test_embeddings.py  test_fuzzyshell.py  test_helpers.py  test_integration.py  test_manual_return_key.py  test_model.py  test_modern_features.py  test_performance.py  test_real_world_similarity.py  test_return_key_behavior.py  test_semantic_quality.py
tests/integration/: __init__.py  test_complete_user_journey.py  test_integration.py  test_real_world_similarity.py
tests/models/: .gitattributes  config.json
tests/performance/: __init__.py  test_ann_performance.py  test_performance.py
tests/unit/: test_ann_health_check.py  test_ann_index_mismatch_fix.py  test_ann_search.py  test_benchmark_models.py  test_bm25_score_normalization.py  (+25 more)
(+24 files in other folders)
